feat: 添加字符串转驼峰格式工具类，优化菜单相关数据结构